feat: 完善酒店、活动替换